# vestibular-genbn

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: streamlit_app.py
docs/: README.md  adding_new_disease.md  api_reference.md  architecture.md  bppv_module.md  cli_reference.md  evidence_to_likelihood_mapping.md  inference_policy.md  json_schema.md  medical_disclaimer.md  meniere_module.md  node_taxonomy.md  overview.md  reproducibility.md  sensitivity_analysis.md  softwarex_user_guide.md
examples/: expected_outputs_core_v0_1.csv  output_core_v0_1_detailed.json  run_examples.py  synthetic_cases.csv
knowledge/default_v0_1/: README.md  project_manifest.json
paper/: manuscript.md
paper/figures/: Figure_1_architecture.mmd  Figure_2_network.mmd
paper/tables/: Table_1_synthetic_cases.md
src/vestibular_genbn/: __init__.py  audit.py  cli.py  derived_nodes.py  exceptions.py  inference.py  knowledge_loader.py  posterior.py  rule_engine.py  schema_validation.py  sensitivity.py  (+1 more)
templates/: template_disease_node.json  template_finding_pattern.json  template_likelihood_rows.json
tests/: conftest.py  test_audit_rules.py  test_cli.py  test_derived_nodes.py  test_examples.py  test_exclusive_graded_support.py  test_exclusive_graded_support_schema.py  test_exclusive_graded_support_unit.py  test_inference.py  test_knowledge_loader.py  test_posterior_independence.py  test_rule_engine.py  test_schema_validation.py  test_schema_validation_compatibility.py  test_sensitivity.py
(+14 files in other folders)
